# SeqAn3_read_mapper

./: CMakeLists.txt  README.md  mapper.cpp  query_small.fastq
